--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - LMEAN</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Asegúrate de enlazar a tu CSS -->
+    <title>LMEAN - CONTACT US</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <link rel="icon" type="image/x-icon" href="fotos/icon_900c9e05bb90d548eb37c9c4c7cab368.ico">
 </head>
 <body>
 
     <header>
         <div class="containerbanner">
-            <h1><a href="index.html">LMEAN</a></h1>
+            <h1><a href="index.html"><img src="fotos/lmean.png" alt="LMEAN" class="logo" style="width: 12%;"></a></h1>
             <nav>
                 <ul>
                     <li><a href="index.html">< Back to home</a></li>
